--- a/src/lib/components/Dropdown.css
+++ b/src/lib/components/Dropdown.css
@@ -2,8 +2,14 @@
 .dash-spreadsheet .Select-control {
     border: none;
     cursor: pointer;
-    height: 26px;
+    height: 30px;  /* matches the td height and line-height */
     border: none;
+}
+
+.dash-spreadsheet .Select-placeholder,
+.dash-spreadsheet .Select--single > .Select-control .Select-value {
+    height: 100%;
+    line-height: inherit;
 }
 
 .dash-spreadsheet .Select:hover,
