dropdown not clipped by container/overflow

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -60,6 +60,10 @@
         box-sizing: inherit;
     }
 
+    .Select {
+        position: static;
+    }
+
     .marker-row {
         tr {
             visibility: hidden !important;
@@ -266,11 +270,6 @@ tr:hover input :not(.cell--selected) {
 .dash-spreadsheet tr:hover .toggle-row {
     color: var(--accent);
 }
-
-.dash-spreadsheet td {
-    position: relative;
-}
-
 
 .cell--uneditable,
 .cell--uneditable input {
