fix click when value is undefined|null|empty

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -132,6 +132,11 @@
             margin: -1px;
             z-index: 500;
         }
+
+        .cell-value {
+            height: 100%;
+            width: 100%;
+        }
     }
 
     // cell content styling
