--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -137,6 +137,12 @@
             height: 100%;
             width: 100%;
         }
+
+        div.cell-value {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
     }
 
     // cell content styling
