prototypical static and conditional styling for rows and cells

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -133,9 +133,13 @@
         }
     }
 
-    td {
+    tr {
         background-color: white;
+    }
 
+    td {
+        background-color: inherit;
+        
         &.cell--selected {
             background-color: var(--selected-background);
         }
