--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -70,6 +70,11 @@
         position: static;
     }
 
+    .Select,
+    .Select-control {
+        background-color: inherit;
+    }
+
     .Select-value {
         display: flex;
         flex-direction: column;
@@ -139,7 +144,7 @@
 
     td {
         background-color: inherit;
-        
+
         &.cell--selected {
             background-color: var(--selected-background);
         }
