--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -245,19 +245,33 @@
 
         .dash-cell-value-container {
             position: relative;
+            width: 100%;
+            height: 100%;
+        }
+
+        .dash-cell-value {
+            height: 100%;
+            width: 100%;
         }
 
         input.dash-cell-value {
             position: absolute;
             left: 0;
             top: 0;
-            width: 100%;
-            height: 100%;
         }
 
         div.dash-cell-value {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        .cell-value-shadow {
             display: inline-block;
+            height: initial;
             margin: auto 0;
+            opacity: 0;
+            width: initial;
         }
     }
 
