fix dropdown minimum size when using default width

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -244,9 +244,12 @@
         }
 
         .dash-cell-value-container {
-            position: relative;
             width: 100%;
             height: 100%;
+        }
+
+        .dash-input-cell-value-container {
+            position: relative;
         }
 
         .dash-cell-value {
@@ -272,6 +275,11 @@
             margin: auto 0;
             opacity: 0;
             width: initial;
+        }
+
+        .dropdown-cell-value-shadow {
+            height: 0px;
+            padding: 0 42px 0 10px;
         }
     }
 
