fix regressions in visual tests

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -270,14 +270,18 @@
         }
 
         .cell-value-shadow {
-            display: inline-block;
-            height: initial;
             margin: auto 0;
             opacity: 0;
+        }
+
+        .input-cell-value-shadow {
+            display: inline-block;
+            height: initial;
             width: initial;
         }
 
         .dropdown-cell-value-shadow {
+            display: block;
             height: 0px;
             padding: 0 42px 0 10px;
         }
