default column width - filter inputs behave like cell inputs (do not affect width)

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -287,6 +287,18 @@
         }
     }
 
+    th.dash-filter {
+        position: relative;
+
+        & input {
+            position: absolute;
+            left: 0;
+            top: 0;
+            height: 100%;
+            width: 100%;
+        }
+    }
+
     // cell content styling
     td, th {
         padding: 2px;
