--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -150,6 +150,17 @@
         }
     }
 
+    &.dash-grow {
+        .cell-0-1,
+        .cell-1-1 {
+            flex: 1 0 auto;
+        }
+
+        table {
+            width: 100%;
+        }
+    }
+
     &:not(.dash-freeze-top):not(.dash-freeze-left) {
         .cell-1-1 {
             .top-left-cells();
@@ -232,15 +243,59 @@
             z-index: 200;
         }
 
+        .dash-cell-value-container {
+            width: 100%;
+            height: 100%;
+        }
+
+        .dash-input-cell-value-container {
+            position: relative;
+        }
+
         .dash-cell-value {
             height: 100%;
             width: 100%;
+        }
+
+        input.dash-cell-value {
+            position: absolute;
+            left: 0;
+            top: 0;
         }
 
         div.dash-cell-value {
             display: flex;
             flex-direction: column;
             justify-content: center;
+        }
+
+        .cell-value-shadow {
+            margin: auto 0;
+            opacity: 0;
+        }
+
+        .input-cell-value-shadow {
+            display: inline-block;
+            height: initial;
+            width: initial;
+        }
+
+        .dropdown-cell-value-shadow {
+            display: block;
+            height: 0px;
+            padding: 0 42px 0 10px;
+        }
+    }
+
+    th.dash-filter {
+        position: relative;
+
+        & input {
+            position: absolute;
+            left: 0;
+            top: 0;
+            height: 100%;
+            width: 100%;
         }
     }
 
@@ -358,7 +413,6 @@ th:hover .sort {
     padding: 0px;
     margin: 0px;
     height: calc(100% - 1px);
-    width: calc(100% - 1px);
     line-height: 30px;
     border: none;
     font-family: inherit;
