increase default styling specificity

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -76,7 +76,7 @@
     position: relative;
 }
 
-.dash-spreadsheet-inner {
+.dash-spreadsheet-container .dash-spreadsheet-inner {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
