--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -384,7 +384,7 @@
     .dash-spreadsheet-inner table {
         border-collapse: collapse;
 
-        font-family: monospace;
+        font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', monospace;
         --accent: hotpink;
         --border: lightgrey;
         --text-color: rgb(60, 60, 60);
@@ -492,10 +492,6 @@
 
     .dash-spreadsheet-inner input.unfocused:focus {
         outline: none;
-    }
-
-    .numeric {
-        font-family: monospace;
     }
 
     .toggle-row {
