- fix performance (font-size)

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -190,6 +190,12 @@
     flex-direction: row;
     position: relative;
 
+    // This overrides Chrome's default `font-size: medium;` which is causing performance issues
+    // with AutoInputResize sub-component in react-select
+    table {
+        font-size: inherit;
+    }
+
     .dash-spreadsheet-inner {
         box-sizing: border-box;
         display: flex;
