- different approach for table / scroll

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -274,7 +274,13 @@
         &.dash-grow {
             .cell-0-1,
             .cell-1-1 {
+                display: flex;
+                flex-direction: row;
                 flex: 1 0 auto;
+            }
+
+            table {
+                flex: 1 0 0;
             }
         }
 
