- calculate scrollbar width and add margin

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -1,5 +1,25 @@
 @import (reference) '~dash-table/style/reset.less';
 
+.if-edge(@rule) {
+    // Applies to non-Edge browsers
+    // Ref: https://browserstrangeness.github.io/css_hacks.html
+    @supports (-ms-ime-align:auto) {
+        & { @rule(); }
+    }
+}
+
+.if-firefox(@rule) {
+    @supports (-moz-appearance:none) {
+        & { @rule(); }
+    }
+}
+
+.if-ie11(@rule) {
+    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+        @rule();
+    }
+}
+
 .inset-shadow(@color, @left, @top, @right, @bottom) {
     box-shadow: inset @left 0px 0px 0px @color,
         inset 0px @top 0px 0px @color,
