--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -141,6 +141,16 @@
             }
         }
 
+        td.focused {
+            & when (@isListView = True) {
+                .inset-shadow(var(--accent), 0px, 0px, 0px, -1px);
+            }
+
+            & when (@isListView = False) {
+                box-shadow: inset 0 0 0 1px var(--accent)
+            }
+        }
+
         .dash-filter {
             input::placeholder {
                 color: inherit;
