--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -211,6 +211,17 @@
     }
 }
 
+.dash-table-tooltip {
+    background-color: #f6f6f6;
+    border: 1px solid #e4e4e4;
+    border-radius: 5px;
+    max-width: 300px;
+    min-width: 300px;
+    padding: 2px 10px;
+    position: absolute;
+    z-index: 500;
+}
+
 .dash-spreadsheet-container {
     .reset-css();
     display: flex;
