First pass - WIP

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -1,17 +1,17 @@
 @import (reference) '~dash-table/style/reset.less';
 
 .inset-shadow(@color, @left, @top, @right, @bottom) {
-    box-shadow: inset @left 0px 0px 0px @color,
-        inset 0px @top 0px 0px @color,
-        inset @right 0px 0px @color,
-        inset 0px @bottom 0px 0px @color;
+    // box-shadow: inset @left 0px 0px 0px @color,
+    //     inset 0px @top 0px 0px @color,
+    //     inset @right 0px 0px @color,
+    //     inset 0px @bottom 0px 0px @color;
 }
 
 .outline-shadow(@color, @left, @top, @right, @bottom) {
-    box-shadow: @left 0px 0px 0px @color,
-        0px @top 0px 0px @color,
-        @right 0px 0px @color,
-        0px @bottom 0px 0px @color;
+    // box-shadow: @left 0px 0px 0px @color,
+    //     0px @top 0px 0px @color,
+    //     @right 0px 0px @color,
+    //     0px @bottom 0px 0px @color;
 }
 
 .top-left-cells(@isListView) {
